--- a/overrides/home.html
+++ b/overrides/home.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="card">
-                    <a href="policies/">
+                    <a href="vacc_documents/">
                         <h3>Policies</h3>
 
                         <p>
